Fix histogram shift position

--- a/src/app/khiops-visualization/components/commons/histogram/histogram.component.scss
+++ b/src/app/khiops-visualization/components/commons/histogram/histogram.component.scss
@@ -17,6 +17,7 @@
   .comp-header {
     padding-top: 1rem;
     margin-top: 1px !important;
+    min-height: 54px !important;
   }
   #histogram-chart {
     top: 50px;
