--- a/src/global.scss
+++ b/src/global.scss
@@ -358,7 +358,7 @@ app-home-layout {
 
 .comp-header {
   background: transparent !important;
-  min-height: 34px;
+  min-height: 34px !important;
   background: var(--bgColor) !important;
   margin: 0em 0.4em 0em 1px;
 
